[Fix] (main): edit CI/CD github

--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -16,11 +16,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y build-essential
+          cd DiscordBot
           timeout 3m npm i || exit 1
 
       - name: Execute
         run: |
-          timeout 30s node ./DiscordBot/index.js || exit 0
+          timeout 30s node ./index.js || exit 0
 
       - name: Check Result
         run: |
